--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -30,6 +30,8 @@ gem 'bcrypt', '3.1.7'
 gem 'faker',                '1.4.2'
 gem 'will_paginate',           '3.0.7'
 gem 'bootstrap-will_paginate', '0.0.10'
+gem 'faker',                '1.4.2'
+
 
 
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
